Fix parallax on tablets and phones

--- a/styles.css
+++ b/styles.css
@@ -41,11 +41,18 @@
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-format{
+.bgimg-format{
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 1366px) {
+  .bgimg-format {
+    background-attachment: scroll;
+  }
 }
 
 /* First image (Logo. Full height) */
